fixed an issue where appointments overlapped or the timing was outside allowed schedule

--- a/src/app/components/appointments/appointments.component.scss
+++ b/src/app/components/appointments/appointments.component.scss
@@ -3,3 +3,7 @@ input[type="radio"] {
     margin-right: 10px;
     margin-left: 10px;
   }
+
+  table {
+    width: 50%;
+  }
